# project-s

./: AGENT.md  Cargo.toml  README.md  devenv.nix  devenv.yaml
.zed/: debug.json  tasks.json
docs/: 001.md  bugs.md  frondeus.json.patch  frondeus.json.rej  frondeus.md  frondeus2.md  llm.md  log.json-025.rej  log.json-027.rej  log.json-028.rej  log.json-029.rej  log.json-030.patch  log.json-030.rej  log.json-031.patch  log.json-031.rej  log.json-037.rej  log.json-038.patch  log.json-038.rej  log.json-039.patch  log.json-039.rej  log.json-040.patch  log.json-040.rej  log.json-041.patch  log.json-041.rej  log.json-042.patch  log.json-042.rej  log.json-044.rej  log.json-045.rej  log.json-046.rej  log.json-047.patch  log.json-047.rej  log.json-052.rej  log.json-053.rej  log.json-055.rej  log.json-056.patch  log.json-056.rej  log.json-057.patch  log.json-057.rej  log.json-058.patch  log.json-058.rej  (+41 more)
examples/: struct.lsp
src/: api.rs  ast.rs  builder.rs  cst.rs  diagnostics.rs  graph.rs  lambda_lifting.rs  lib.rs  lsp.rs  macro_expansion.rs  main.rs  modules.rs  parser.rs  patterns.rs  runtime.rs  simple_types.rs  source.rs  test_utils.rs  thunk_inserting.rs  tree_walker.rs  type_constructor_transform.rs  types.rs  visitor.rs
test/: test.s
test-runner/: Cargo.toml
test-runner/src/: lib.rs  runner.rs  utils.rs
test-runner/v2/: multiple_asserts.md  single_assert.md
tree-sitter-s/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-s/bindings/c/: tree-sitter-s.pc.in
tree-sitter-s/bindings/c/tree_sitter/: tree-sitter-s.h
tree-sitter-s/bindings/go/: binding.go  binding_test.go
tree-sitter-s/bindings/node/: binding.cc  index.js
tree-sitter-s/bindings/python/tests/: test_binding.py
tree-sitter-s/bindings/python/tree_sitter_s/: __init__.py  binding.c
tree-sitter-s/bindings/rust/: build.rs  lib.rs
tree-sitter-s/bindings/swift/TreeSitterSTests/: TreeSitterSTests.swift
tree-sitter-s/queries/: highlights.scm
tree-sitter-s/src/: grammar.json  node-types.json  parser.c
tree-sitter-s/test/corpus/: numbers.txt
vscode/: package-lock.json  package.json
xtask/: Cargo.toml
zed/: Cargo.toml  extension.toml
(+599 files in other folders)
