[package]
name = "project-s"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "test-runner", "xtask"]

[dependencies]
tree-sitter-s = { path = "tree-sitter-s" }
tree-sitter = "*"
thiserror = "2.0.12"
serde_json = "1.0.140"
itertools = "0.14.0"
tracing = "0.1.41"

[dev-dependencies]
tempfile = "3.20.0"
test-runner = { path = "./test-runner" }
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
