[package]
name = "project-s"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "test-runner", "xtask", "zed"]

[dependencies]
tree-sitter-s = { path = "tree-sitter-s" }
tree-sitter = "*"
thiserror = "2.0.12"
serde_json = "1.0.140"
itertools = "0.14.0"
tracing = "0.1.41"

# LSP
tower-lsp-server = "0.21.1"
tokio = { version = "1.45.1", features = ["full"] }
tracing-subscriber = "0.3.19"
tree-sitter-highlight = "0.25.6"
ariadne = { version = "0.5.1", features = ["auto-color"] }
indexmap = "2.10.0"

[dev-dependencies]
tempfile = "3.20.0"
test-runner = { path = "./test-runner" }
tracing-appender = "0.2.3"
