[package]
name = "test-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
# diff_utils = { git = "https://github.com/frondeus/diff-assert.git", features = ["display", "patch"] }

glob = "0.3.0"
anyhow = "1.0.28"
regex = "1.3.6"
chrono = "0.4.11"
pulldown-cmark = "0.11.0"
tempfile = "3.10.1"
